--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: demo
+name: delivery
 description: A new Flutter project.
 
 publish_to: 'none'
@@ -60,7 +60,7 @@ flutter:
   generate: true
   uses-material-design: true
 
-#  assets:
+  assets:
 #    - assets/images/
 #    - assets/images/utils/
 #    - assets/images/empty_view/
@@ -70,7 +70,7 @@ flutter:
 #    - assets/images/moreicons/
 #    - assets/images/map/
 #    - assets/images/fooderror/
-#    - assets/json/
+    - assets/json/
 #
 #  fonts:
 #    - family: Metropolis
